--- a/main.html
+++ b/main.html
@@ -12,4 +12,18 @@
 	window.open('hacked.html')
 	window.open('hacked.html')
 	window.open('hacked.html')
+	
 </script>
+
+<button onclick="openYouTube()">Open YouTube</button>
+
+<script>
+function openYouTube() {
+    var url = 'https://www.youtube.com';
+    window.open(url, '_blank');
+}
+</script>
+
+
+
+
