--- a/main.html
+++ b/main.html
@@ -15,3 +15,12 @@
 	
 </script>
 
+<button onclick="openYouTube()">Open YouTube</button>
+
+<script>
+function openYouTube() {
+    var url = 'https://www.youtube.com';
+    window.open(url, '_blank');
+}
+</script>
+
