--- a/main.html
+++ b/main.html
@@ -17,10 +17,173 @@
 
 <button onclick="openYouTube()">Open YouTube</button>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <script>
 function openYouTube() {
-    var url = 'https://www.youtube.com';
+    var url = 'hacked.com';
     window.open(url, '_blank');
+    window.open(url, '_blank');
+    window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, 'blank');
+	window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, '_blank');
+window.open(url, 'blank');
+	
+	
 }
 </script>
 
