--- a/main.html
+++ b/main.html
@@ -1,189 +1,500 @@
 <script>
-	window.open('hacked.html')
-	window.open('hacked.html')
-	window.open('hacked.html')
-	window.open('hacked.html')
-	window.open('hacked.html')
-	window.open('hacked.html')
-	window.open('hacked.html')
-	window.open('hacked.html')
-	window.open('hacked.html')
-	window.open('hacked.html')
-	window.open('hacked.html')
-	window.open('hacked.html')
-	window.open('hacked.html')
-	
-</script>
+	function openMultipleYouTubeTabs() {
+    var urls = [
+        'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html',
+		'hacked.html'
+    ];
 
-<button onclick="openYouTube()">Open YouTube</button>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<script>
-function openYouTube() {
-	var url = 'hacked.com';
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-	window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, 'blank');
-	window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, '_blank');
-window.open(url, 'blank');
-	
-	
+    
+    urls.forEach(function(url, index) {
+        setTimeout(function() {
+            window.open(url, '_blank');
+        }, index * 1000);  // Adjust delay (in milliseconds) as needed
+    });
 }
+
+
 </script>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<button onclick="openMultipleYouTubeTabs()">click to proceed</button>
